# TrialPilot--MAS-For-Cross-Trial-Synthesis

./: README.md  pyproject.toml
src/trialpilot/: __init__.py  config.py  graph.py  main.py  schemas.py
src/trialpilot/agents/: __init__.py  biostatistics.py  extraction.py  regulatory.py  simulation.py
src/trialpilot/tools/: __init__.py  clinical_trials_api.py  patient_generator.py  statistics.py
tests/: test_core.py
